# cull

./: .gitattributes  .gitignore  .stylelintrc.json  ARCHITECTURE.md  IMAGE_PIPELINE_PLAN.md  LICENSE  MACOS_SUPPORT_PLAN.md  README.md  SMART_CULLING_PHASE3_DESIGN.md  SMART_CULLING_PLAN.md  TESTING.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tests.json
.github/workflows/: ci.yml  release.yml
docs/history/: IMAGE_PIPELINE_PLAN.md  SMART_CULLING_PLAN.md
docs/superpowers/plans/: 2026-06-02-image-loading-system.md  2026-06-02-thumbstrip-virtualization.md  2026-07-05-smart-culling-phase3d-3c.md  2026-07-06-ux-buildlist.md  2026-07-07-grand-cleanup-brief.md  2026-07-07-grand-cleanup.md  2026-07-07-photo-pane-unification.md  2026-07-07-zoom-phase2.md
docs/superpowers/specs/: 2026-06-02-image-loading-system-design.md  2026-06-02-thumbstrip-virtualization-design.md
mockups/: cull.html  index.html  press.html  quiet.html  studio.html
scripts/: export-models.py  fetch-models.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: decode_probe.rs
src-tauri/icons/: icon.icns
src-tauri/models/: laion_aesthetic.onnx
src-tauri/src/: analyze.rs  bundle.rs  cr3.rs  embed.rs  faces.rs  file_ops.rs  io_gate.rs  jpeg_rgb.rs  lib.rs  memory_pressure.rs  meta.rs  midtier.rs  ml_models.rs  phash.rs  scan.rs  test_util.rs  thumb_cache.rs  tier_cache.rs  xmp.rs
src/app/: useCullKeymap.ts  useDecideCallbacks.ts  useDragAndDrop.ts  useFolderTrouble.ts  useHeldRepeat.test.ts  useHeldRepeat.ts  useImageStoreWiring.ts  useOverlayKind.ts  usePaneZoom.ts  useQuitGuard.ts  useRatingPersistence.ts  useSessionLifecycle.ts  useSiteNavigation.ts  useSmartDerivations.ts  useUndoRedo.ts
src/components/: CompareStrip.tsx  CompareView.tsx  DevHud.tsx  ExifPanel.tsx  ExifRail.tsx  FinishDialog.tsx  GridView.tsx  HelpOverlay.tsx  RatingDot.tsx  ScanFailureCard.test.ts  ScanFailureCard.tsx  SettingsDialog.tsx  ThumbCell.tsx  ThumbStrip.tsx  VerdictDot.tsx  WindowControls.tsx  gridWindow.test.ts  gridWindow.ts  verdictGlyph.test.ts  verdictGlyph.tsx
src/components/loupe/: HiResLayer.tsx  LoupeStage.tsx  PresentLayers.tsx  paneGeometry.test.ts  paneGeometry.ts  zoomTransition.ts
src/components/pane/: HiResLayer.tsx  PhotoPane.tsx  PresentLayers.tsx  paneGeometry.ts  zoomTransition.test.ts  zoomTransition.ts
src/components/strip/: BurstBoxes.tsx  FilmStrip.tsx  PhotoStrip.tsx  burstSegments.test.ts  burstSegments.ts  computeWindow.test.ts  computeWindow.ts  metrics.ts  useStripVirtualizer.ts
src/hooks/: useArmedConfirm.ts  useChipsTooltipVisibility.ts  useFocusTrap.ts  useRecents.test.ts  useRecents.ts  useSettings.test.ts  useSettings.ts
src/image/: decodePool.test.ts  decodePool.ts  devStats.test.ts  devStats.ts  folderRetry.test.ts  folderRetry.ts  imageStore.test.ts  imageStore.ts  midSelect.test.ts  midSelect.ts  midSweep.test.ts  midSweep.ts  present.test.ts  present.ts  pressureProfile.test.ts  pressureProfile.ts  stage.test.ts  stage.ts  tierErrors.test.ts  tierErrors.ts  tierLane.ts  useImage.ts  usePresent.ts  useThumb.ts
src/overlays/: histogramRender.test.ts  histogramRender.ts  maskClient.ts  maskScans.test.ts  maskScans.ts  maskWorker.ts  overlayCompute.ts  overlayService.test.ts  overlayService.ts
src/smart/: analysisDriver.test.ts  analysisDriver.ts  analysisTargets.test.ts  analysisTargets.ts  burstInputs.test.ts  burstInputs.ts  capFavorites.test.ts  capFavorites.ts  deriveVerdict.test.ts  deriveVerdict.ts  groupBursts.test.ts  groupBursts.ts  groupSimilar.test.ts  groupSimilar.ts  pickWinner.test.ts  pickWinner.ts  testScores.ts  useSmartCulling.ts
src/smart/__fixtures__/: testScores.ts
src/types/: image.ts  index.ts  ipc.ts  nav.ts  rating.ts  settings.ts  ui.ts
src/utils/: blurhashCache.ts  bundle.ts  dlog.ts  filter.test.ts  filter.ts  filterModes.test.ts  filterModes.ts  format.test.ts  format.ts  gridSelection.test.ts  gridSelection.ts  mergeMeta.test.ts  mergeMeta.ts  path.test.ts  path.ts  platform.ts  ratingColor.test.ts  ratingColor.ts  scrollIndicator.test.ts  scrollIndicator.ts  scrubAccel.test.ts  scrubAccel.ts  shimmer.ts  sizer.ts  smartEmptyState.test.ts  smartEmptyState.ts  snap.test.ts  snap.ts  tooltipVisibility.test.ts  tooltipVisibility.ts  zoom.test.ts  zoom.ts
